--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,16 @@
   --special-grey-light: #ebebeb;
   --special-grey-paginator: #d9d9d9;
   --special-yellow-medium: #ffc600;
+  --special-white: rgba(255, 255, 255, 0.3);
+  --special-white-light: rgba(255, 255, 255, 0.7);
+  --special-black-yellow: rgba(240, 197, 46, 0.5);
+  --special-black-yellow-main: rgba(240, 197, 46, 1);
+  --special-black-yellow-medium: rgba(240, 197, 46, 0.3);
+  --special-black-shadow: rgb(0,0,0);
+  --special-black-shadow-light: rgba(0,0,0,0.4);
+  --special-black-shadow-medium: rgba(0,0,0,0.3);
+  --special-black-shadow-dark: rgba(0,0,0,0.2);
+  --special-shadow: rgba(0, 0, 0, 0.15);
 
   --status-pink: #f6dada;
 }
@@ -28,28 +38,28 @@
   font-weight: 300;
   font-family: "Gilroy";
   font-display: swap;
-  src: url("./fonts/gilroylight.woff2") format("woff2"), url("./fonts/gilroylight.woff") format("woff");
+  src: url("../fonts/gilroylight.woff2") format("woff2"), url("../fonts/gilroylight.woff") format("woff");
 }
 @font-face {
   font-style: normal;
   font-weight: 800;
   font-family: "Gilroy";
   font-display: swap;
-  src: url("./fonts/gilroyextrabold.woff2") format("woff2"), url("./fonts/gilroyextrabold.woff") format("woff");
+  src: url("../fonts/gilroyextrabold.woff2") format("woff2"), url("../fonts/gilroyextrabold.woff") format("woff");
 }
 @font-face {
   font-style: normal;
   font-weight: 300;
   font-family: "Open Sans";
   font-display: swap;
-  src: url("./fonts/opensanslight.woff2") format("woff2"), url("./fonts/opensanslight.woff") format("woff");
+  src: url("../fonts/opensanslight.woff2") format("woff2"), url("../fonts/opensanslight.woff") format("woff");
 }
 @font-face {
   font-style: normal;
   font-weight: 400;
   font-family: "Open Sans";
   font-display: swap;
-  src: url("./fonts/opensans.woff2") format("woff2"), url("./fonts/opensans.woff") format("woff");
+  src: url("../fonts/opensans.woff2") format("woff2"), url("../fonts/opensans.woff") format("woff");
 }
 
 /* Global */
@@ -191,7 +201,7 @@ img {
 .main-navigation__form::before {
   content: '';
   position: absolute;
-  background-image: url(./img/icon_search.svg);
+  background-image: url(../img/icon_search.svg);
   width: 16px;
   height: 16px;
   top: 3px;
@@ -238,7 +248,7 @@ img {
   background-color: var(--basic-black);
 }
 .main-navigation__button-form:active {
-  color: rgba(255, 255, 255, 0.3);
+  color: var(--special-white);
 }
 .main-navigation__button {
   position: relative;
@@ -265,21 +275,21 @@ img {
 .main-navigation__button--enter::before {
   width: 13px;
   height: 14px;
-  background-image: url("./img/user-black.svg");
+  background-image: url(../img/user-black.svg);
   left: -25px;
   top: 5px;
 }
 .main-navigation__button--compare::before {
   width: 14px;
   height: 14px;
-  background-image: url("./img/chart-black.svg");
+  background-image: url(../img/chart-black.svg);
   left: 31px;
   top: 5px;
 }
 .main-navigation__button--basket::before {
   width: 10px;
   height: 10px;
-  background-image: url("./img/cart-black.svg");
+  background-image: url(../img/cart-black.svg);
   left: 43px;
   top: 6px;
 }
@@ -318,7 +328,7 @@ img {
   position: absolute;
   width: 22px;
   height: 22px;
-  background-image: url(./img/icon_plus.svg);
+  background-image: url(../img/icon_plus.svg);
   left: 232px;
 }
 .site-navigation__item:last-child {
@@ -510,7 +520,7 @@ img {
   padding: 0;
   width: 12px;
   height: 12px;
-  background-image: url(./img/slider-button-empty.svg);
+  background-image: url(../img/slider-button-empty.svg);
   border: none;
   background-color: transparent;
   cursor: pointer;
@@ -519,7 +529,7 @@ img {
   margin-right: 18px;
 }
 .slider-button__toggle--current {
-  background-image: url(./img/slider-button-current.svg);
+  background-image: url(../img/slider-button-current.svg);
 }
 .slider-main__button {
   padding: 0px 45px;
@@ -589,20 +599,20 @@ img {
   background-repeat: no-repeat;
 }
 .information__container--delivery::after {
-  background-image: url(./img/delivery.svg);
+  background-image: url(../img/delivery.svg);
   width: 136px;
   height: 164px;
   left: 620px;
 }
 .information__container--guarantee::after {
-  background-image: url(./img/guarantee.svg);
+  background-image: url(../img/guarantee.svg);
   width: 171px;
   height: 195px;
   left: 605px;
   top: -18px;
 }
 .information__container--credit::after {
-  background-image: url(./img/credit.svg);
+  background-image: url(../img/credit.svg);
   width: 156px;
   height: 188px;
   left: 600px;
@@ -688,22 +698,22 @@ img {
 .producers__img--dji:hover,
 .producers__img--dji:focus,
 .producers__img--dji:active {
-  background-image: url(./img/logo-dji-color.png);
+  background-image: url(../img/logo-dji-color.png);
 }
 .producers__img--sp:hover,
 .producers__img--sp:focus,
 .producers__img--sp:active {
-  background-image: url(./img/logo-sp-color.png);
+  background-image: url(../img/logo-sp-color.png);
 }
 .producers__img--gopro:hover,
 .producers__img--gopro:focus,
 .producers__img--gopro:active {
-  background-image: url(./img/logo-gopro-color.png);
+  background-image: url(../img/logo-gopro-color.png);
 }
 .producers__img--vive:hover,
 .producers__img--vive:focus,
 .producers__img--vive:active {
-  background-image: url(./img/logo-vive-color.png);
+  background-image: url(../img/logo-vive-color.png);
 }
 .page-main__container {
   display: grid;
@@ -747,7 +757,7 @@ img {
 .description__item::before {
   content: '';
   position: absolute;
-  background-image: url(./img/ellipse.svg);
+  background-image: url(../img/ellipse.svg);
   width: 8px;
   height: 8px;
   left: -30px;
@@ -816,7 +826,7 @@ img {
   font-size: 15px;
   line-height: 21px;
   background-color: transparent;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--special-white-light);
   outline: none;
   padding: 0;
 }
@@ -838,17 +848,17 @@ img {
 .footer-navigation__button--enter::before {
   width: 13px;
   height: 14px;
-  background-image: url("./img/icon_user.svg");
+  background-image: url(../img/icon_user.svg);
 }
 .footer-navigation__button--compare::before {
   width: 14px;
   height: 14px;
-  background-image: url("./img/icon_chart.svg");
+  background-image: url(../img/icon_chart.svg);
 }
 .footer-navigation__button--basket::before {
   width: 10px;
   height: 10px;
-  background-image: url("./img/icon_cart.svg");
+  background-image: url(../img/icon_cart.svg);
   left: -21px;
   bottom: 8px;
 }
@@ -952,13 +962,13 @@ img {
   opacity: 0.1;
 }
 .social__link--fb {
-  background-image: url(./img/icon_facebook.svg);
+  background-image: url(../img/icon_facebook.svg);
 }
 .social__link--insta {
-  background-image: url(./img/icon_instagram.svg);
+  background-image: url(../img/icon_instagram.svg);
 }
 .social__link--twitter {
-  background-image: url(./img/icon_witter.svg);
+  background-image: url(../img/icon_witter.svg);
 }
 .social__link-html {
   display: flex;
@@ -1022,8 +1032,8 @@ img {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: var(--special-black-shadow);
+  background-color: var(--special-black-shadow-light);
 }
 .modal__container,
 .modal-map__container {
@@ -1035,7 +1045,7 @@ img {
   margin-left: -470px;
   padding: 92px 100px 65px;
   background-color: var(--basic-white);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 10px var(--special-shadow);
 }
 .modal-map__container {
   padding: 0;
@@ -1075,7 +1085,7 @@ img {
   right: 16px;
   width: 55px;
   height: 55px;
-  background-color: rgba(240, 197, 46, 0.5);
+  background-color: var(--special-black-yellow);
   border: 0;
   border-radius: 50%;
   cursor: pointer;
@@ -1089,17 +1099,17 @@ img {
   top: 13px;
   width: 30px;
   height: 30px;
-  background-image: url(./img/icon_cross.svg);
+  background-image: url(../img/icon_cross.svg);
 }
 .modal__button:hover,
 .modal__button:focus,
 .modal-map__button:hover,
 .modal-map__button:focus {
-  background-color: rgba(240, 197, 46, 1);
+  background-color: var(--special-black-yellow-main);
 }
 .modal__button:active,
 .modal-map__button:active {
-  background-color: rgba(240, 197, 46, 0.3);
+  background-color: var(--special-black-yellow-medium);
 }
 .modal__paragraph {
   display: flex;
@@ -1166,7 +1176,7 @@ img {
   background-repeat: no-repeat;
   width: 13px;
   height: 14px;
-  background-image: url("./img/user-black.svg");
+  background-image: url(../img/user-black.svg);
 }
 .main-navigation__link {
   color: var(--basic-black);
@@ -1205,7 +1215,7 @@ img {
   content: '';
   position: absolute;
   background-repeat: no-repeat;
-  background-image: url(./img/arrow_nav.svg);
+  background-image: url(../img/arrow_nav.svg);
   width: 12px;
   height: 12px;
   right: -28px;
@@ -1286,7 +1296,7 @@ img {
 }
 .filter__inner .filter__scale {
   height: 2px;
-  background: rgba(0, 0, 0, 0.2);
+  background: var(--special-black-shadow-dark);
 }
 .filter__inner .filter__bar {
   width: 65%;
@@ -1300,7 +1310,7 @@ img {
   width: 24px;
   height: 24px;
   padding: 0;
-  background-image: url(./img/range.svg);
+  background-image: url(../img/range.svg);
   background-repeat: no-repeat;
   cursor: pointer;
 }
@@ -1359,7 +1369,7 @@ img {
   align-items: center;
   width: 24px;
   height: 24px;
-  background-image: url(./img/checkbox-off.svg);
+  background-image: url(../img/checkbox-off.svg);
 }
 .filter__input-checkbox:hover + .filter__checkbox-indicator,
 .filter__input-checkbox:focus + .filter__checkbox-indicator {
@@ -1377,7 +1387,7 @@ img {
   display: block;
   width: 13.54px;
   height: 10.5px;
-  background-image: url(./img/checked.svg);
+  background-image: url(../img/checked.svg);
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
@@ -1458,11 +1468,11 @@ img {
   margin-right: 16px;
 }
 .sorting__button--more {
-  background-image: url(./img/icon-up-dir.svg);
+  background-image: url(../img/icon-up-dir.svg);
   opacity: 0.3;
 }
 .sorting__button--less {
-  background-image: url(./img/icon-down-dir.svg);
+  background-image: url(../img/icon-down-dir.svg);
 }
 .sorting__button:hover,
 .sorting__button:focus {
@@ -1522,7 +1532,7 @@ opacity: 0.6;
   width: 62px;
   height: 62px;
   background-repeat: no-repeat;
-  background-image: url(./img/new-position.svg);
+  background-image: url(../img/new-position.svg);
 }
 .items__title {
   margin: 0;
@@ -1602,7 +1612,7 @@ opacity: 0.6;
   background-color: var(--special-grey-paginator);
 }
 .paginator__link:active {
-  color: rgba(0, 0, 0, 0.3);
+  color: var(--special-black-shadow-medium);
 }
 .paginator__list {
   list-style: none;
@@ -1627,7 +1637,7 @@ opacity: 0.6;
 }
 .footer-navigation__link {
   line-height: 21px;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--special-white-light);
   margin-right: 15px;
   outline: none;
 }
@@ -1642,5 +1652,5 @@ opacity: 0.6;
   width: 13px;
   height: 14px;
   background-repeat: no-repeat;
-  background-image: url(./img/user-sp-yellow.svg);
+  background-image: url(../img/user-sp-yellow.svg);
 }
